LU-3204 build: clean up SET_BUT_UNUSED

Clean up the code from really unused variables and rearrange other
to remove SET_BUT_UNUSED macro usage if possible.

Signed-off-by: Dmitry Eremin <dmitry.eremin@intel.com>
Change-Id: If7b6b3576d3ecc79948a7a1eb46a08c27a3bbc03